--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -8,9 +8,7 @@ body {
   background-color 0.5s;
   line-height: 1.2;
   font-size: 24px;
-  font-family:
-    Roboto,
-    sans-serif;
+  font-family: "Roboto", Roboto, sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
