--- a/src/assets/stylesheets/global.scss
+++ b/src/assets/stylesheets/global.scss
@@ -1,10 +1,3 @@
-$body-background: #F5F5F5;
-$sidebar-background: #333333;
-$global-grey: #DDDDDD;
-$sidebar-hover: rgba(255, 255, 255, 0.2);
-$white: #FFF;
-$dark-text: #333333;
-
 /* Font: Montserrat[Font]
 "https://fonts.google.com/specimen/Montserrat"
 Accessed 21/2/24 */
@@ -20,6 +13,18 @@ Accessed 21/2/24 */
     font-family: "Roboto";
     src: url("/src/assets/fonts/Roboto-Regular.ttf");
 }
+
+$body-background: #F5F5F5;
+$sidebar-background: #333333;
+$sidebar-hover: rgba(255, 255, 255, 0.2);
+$global-grey: #DDDDDD;
+$white: #FFF;
+$dark-text: #333333;
+$heading-one-size: 56px;
+$heading-two-size: 36px;
+$nav-button-size: 36px;
+$paragraph-font-size: 36px;
+$nav-button-height: 120px;
 
 @mixin respond-small {
     @media (min-width: 600px) { @content };
